# difficultychange

./: Cargo.toml
src/: lib.rs  util.rs
src/menu/: change.rs  menu.rs  mod.rs
src/menu/items/: hard.rs  lunatic.rs  mod.rs  normal.rs
src/sequences/: mod.rs  myroom.rs  myroomdiff.rs
