[package]
name = "difficultychange"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
cobapi = { git = "https://github.com/DivineDragonFanClub/cobapi.git", version = "0.3.0" }
engage = { git = "https://github.com/DivineDragonFanClub/engage.git", version = "0.9.0" }
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch = "preview" }
unity = { git = "https://github.com/DivineDragonFanClub/unity.git", version = "0.3.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
